--- a/index.html
+++ b/index.html
@@ -1,55 +1,65 @@
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art Style Selector</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Style My Tat</title>
 </head>
 <body>
+  <h1>Style My Tat</h1>
+  <p>Upload a photo to generate an AI-styled tattoo concept.</p>
   
-  
-  
-  <body>
-    <div class="container">
-        <h1>Art Style Selector</h1>
-        <div class="form-group">
-            <label for="category">Category</label>
-            <select id="category"></select>
-        </div>
-        <div class="form-group">
-            <label for="sub-category">Sub-Category</label>
-            <select id="sub-category"></select>
-        </div>
-        <div class="form-group">
-            <label for="art-style">Art Style</label>
-            <select id="art-style" disabled></select>
-        </div>
-        <div class="form-group">
-          <label for="camera-style">Camera Style:</label>
-          <select id="camera-style">
-            <option value="">Select a camera style</option>
-
-          </select>
-          <br><br>
-
-        <div class="form-group">
-            <label for="input-text">Input Text:</label>
-            <input type="text" cols="50" rows="2" id="inputText" maxlength="200">
-        </div>
-
-          <label for="output-text">Output Text:</label>
-          <textarea id="output-text" cols="50" rows="5" readonly></textarea>
-
-        </div>  <div class="container">
-    <h1>Art Style Selector</h1>
-    <!-- other form elements -->
-    <button id="copy-btn">Copy Output Text</button>
-    <!-- other elements -->
-  </div>
+  <div id="style-selector">
+    <h2>Art Style Selector</h2>
+    <div class="form-group">
+        <label for="category">Category</label>
+        <select id="category"></select>
     </div>
-      
+    <div class="form-group">
+        <label for="sub-category">Sub-Category</label>
+        <select id="sub-category"></select>
+    </div>
+    <div class="form-group">
+        <label for="art-style">Art Style</label>
+        <select id="art-style" disabled></select>
+    </div>
+    <div class="form-group">
+      <label for="camera-style">Camera Style:</label>
+      <select id="camera-style">
+        <option value="">Select a camera style</option>
+
+      </select>
+      <br><br>
+
+    <div class="form-group">
+        <label for="input-text">Input Text:</label>
+        <input type="text" cols="50" rows="2" id="inputText" maxlength="200">
+    </div>
+
+      <label for="output-text">Output Text:</label>
+      <textarea id="output-text" cols="50" rows="5" readonly></textarea>
+
+    </div>
+    <button id="copy-btn">Copy Output Text</button>
+  </div>
+
+  <form id="upload-form">
+    <input type="file" id="file-input" accept="image/*">
+    <button type="submit">Upload</button>
+  </form>
+
+  <div id="preview">
+    <h2>Preview</h2>
+    <img id="preview-img" src="#" alt="Preview of the uploaded image" style="display:none">
+  </div>
+
+  <div id="result">
+    <h2>Generated Tattoo Concept</h2>
+    <img id="result-img" src="#" alt="AI-generated tattoo concept" style="display:none">
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js"></script>
 </body>
-      
-<script src="script.js"></script>
 </html>
- 
